Update - not scaling images, they're unoptimized and are actually larger when scaled.

--- a/source/cloud-compliance-management-system/index.html.slim
+++ b/source/cloud-compliance-management-system/index.html.slim
@@ -82,7 +82,7 @@ section#cloud-info.container-color--white
   aside.row.collapse
     .columns.small-12
       h3.headline-4.text-center Multi-Dimensional Compliance on the Cloud
-      img.img-crisp.lozad src="#{diagram_1}?fm=jpg&w=800&q=5" data-src="#{diagram_1}?w=2000" width="100%"
+      img.img-crisp.lozad src="#{diagram_1}?fm=jpg&w=800&q=5" data-src="#{diagram_1}" width="100%"
   .section-article
     .row.align-center
       .columns.small-12.medium-8.large-6
@@ -90,7 +90,7 @@ section#cloud-info.container-color--white
   aside.row.collapse
     .columns.small-12
       h3.headline-4.text-center Managing a Managed Service
-      img.img-crisp.lozad src="#{diagram_2}?fm=jpg&w=800&q=5" data-src="#{diagram_2}?w=2000" width="100%"
+      img.img-crisp.lozad src="#{diagram_2}?fm=jpg&w=800&q=5" data-src="#{diagram_2}" width="100%"
   .section-article
     .row.align-center
       .columns.small-12.medium-8.large-6
