--- a/source/cloud-compliance-management-system/index.html.slim
+++ b/source/cloud-compliance-management-system/index.html.slim
@@ -1,6 +1,6 @@
 ---
 title: "Datica Cloud Compliance Management System"
-summary: "Datica's Cloud Compliance Management System (CCMS) is the first-ever tool to guarantee compliance assurance of managed cloud-native services."
+summary: "Datica's Cloud Compliance Management System (CCMS) will be the first-ever tool to guarantee compliance assurance of managed cloud-native services."
 navTitle: "Datica CCMS"
 author: "Datica, Inc."
 tags: "compliance, HIPAA, HL7, FHIR, interoperability, EHR, Kubernetes"
@@ -22,7 +22,7 @@ ruby:
   form_1 = data.site.forms['54agWFbPVYog62Ugg64ocW']
   form_2 = data.site.forms['328pNB4IvCaQWQMCWmgSCy']
 
-svg aria-hidden="true" data-name="chevron" style=("position: absolute; width: 0; height: 0; overflow: hidden;") xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"
+/ svg aria-hidden="true" data-name="chevron" style=("position: absolute; width: 0; height: 0; overflow: hidden;") xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"
   defs
     symbol#icon-chevron-down viewbox=("0 0 18 18")
       title chevron-down
@@ -49,11 +49,27 @@ section#api.section-article.pad-no-bottom.container-gray-11.drop-taper
       p Each configuration supported by Datica CCMS has been audited against HITRUST CSF v9.1, meaning a configuration is guaranteed to be compliant against the regimes of HIPAA, GDPR, and GxP. It tracks configuration changes with each CSF update.
     .column
       h3.headline-4 Uniquely Dynamic
-      p The cloud is a dynamic world and compliance struggles to keep up. Datica CCMS is the only tool available to assess assurance of managed and micro services against critical compliance controls. It gives customers a strategy for the future.
+      p The cloud is a dynamic world and compliance struggles to keep up. Datica CCMS is the only tool available to assess assurance of managed and microservices against critical compliance controls. It gives customers a strategy for the future.
   .row.align-center
     .columns.small-12.large-10.text-center
       img.lozad.img-crisp src="#{img_2}?w=792&fm=jpg&q=10&bg=rgb:e5e9eb" data-src="#{img_2}?w=1800" alt="CCMS features"
 
+/  .row.align-left.small-up-1.medium-up-2
+    .column
+      h4.headline-4 Continuous Monitoring
+      p Datica CCMS is connected directly to your cloud provider account - programmatically receiving steaming updates.
+    .column
+      h4.headline-4 Attestation Tools
+      p Proving compliance is a critical step in actually achieving compliance. With the CCMS, users can provide auditors a digital papertrail of their cloud environment configuration over time.
+    .column
+      h4.headline-4 Risk and Incident Details
+      p When checks fail in the CCMS they don’t fail silently. With a robust notification system, users are made aware of compliance events as they happen.
+    .column
+      h4.headline-4 Remediation Guidance
+      p A failed check requires remediation. Leaving a system misconfigured can result in not only a failed audit, but places your end user’s data at risk. With Datica CCMS, users can see exactly how to remedy failed checks with step by step guides.
+    .column
+      h4.headline-4 Historical Reporting
+      p With historical monitoring, users can build and scope reports to fit their auditing needs, providing concrete evidence of compliance overtime.
 /section#api.section-article.pad-no-bottom.container-gray-11.drop-taper
   .row.align-center
     .columns.small-12.large-8.text-center
@@ -68,7 +84,7 @@ section#api.section-article.pad-no-bottom.container-gray-11.drop-taper
         p Each configuration supported by Datica CCMS has been audited against HITRUST CSF v9.1, meaning a configuration is guaranteed to be compliant against the regimes of HIPAA, GDPR, and GxP. It tracks configuration changes with each CSF update.
       .group
         h3.headline-4 Uniquely Dynamic
-        p The cloud is a dynamic world and compliance struggles to keep up. Datica CCMS is the only tool available to assess assurance of managed and micro services against critical compliance controls. It gives customers a strategy for the future.
+        p The cloud is a dynamic world and compliance struggles to keep up. Datica CCMS is the only tool available to assess assurance of managed and microservices against critical compliance controls. It gives customers a strategy for the future.
     .columns.small-12.medium-8.medium-order-1
       img.lozad.img-crisp src="#{img_2}?w=792&fm=jpg&q=10&bg=rgb:e5e9eb" data-src="#{img_2}?w=1800" alt="CCMS features"
 
@@ -77,8 +93,11 @@ section#cloud-info.container-color--white
     .row.align-center
       .columns.small-12.medium-8.large-6
         h2.headline-2.text-center 2018 is a Post-Cloud World
-        p.lead The proliferation of abstracted cloud services has increased in an effort to improve developer experience (a good thing). As a result, most cloud environments are a constellation of managed services and micro services. The cloud is no longer simply an operating system on someone else's hard drive.
+        p.lead The proliferation of abstracted cloud services has increased in an effort to improve developer experience (a good thing). As a result, most cloud environments are a constellation of managed services and microservices. The cloud is no longer simply an operating system on someone else's hard drive.
         p.lead But increased abstraction has meant greater control has been taken away from the end user's ability to attest to compliance assurances (a bad thing). The entire layer of "Services" on top of traditional VMs has completely changed how compliance should be measured, monitored, and managed.
+        p
+          em Images from the book,
+          a href="https://completecloudcompliance.com" title="Complete Cloud Compliance Book" Complete Cloud Compliance.
   aside.row.collapse
     .columns.small-12
       h3.headline-4.text-center Multi-Dimensional Compliance on the Cloud
@@ -86,7 +105,7 @@ section#cloud-info.container-color--white
   .section-article
     .row.align-center
       .columns.small-12.medium-8.large-6
-        p.lead The problem explodes when multiple services are used—a common approach to modern cloud workloads. Developers must re-invent the wheel of mapping controls in totality over a new service.
+        p.lead The problem explodes when multiple services are used—a common approach to modern cloud workloads. Developers must reinvent the wheel of mapping controls in totality over a new service.
   aside.row.collapse
     .columns.small-12
       h3.headline-4.text-center Managing a Managed Service
@@ -100,7 +119,7 @@ section#hitrust.section-article.container-gray-12
     .columns.small-12.medium-6.large-6
       h2.headline-3 Make any cloud service HITRUST certified
       p.lead The compliant configuration states of cloud services should not be proprietary. Transparency is fundamental to healthcare's transformation. Every service monitored by the CCMS will be publicly documented to help empower healthcare developers.
-      p In a post-cloud world, configuring a service in a continual state is the goal. The hard part is simply knowing the proper configuration state mapped to a specific control. Modern compliance extends way beyond simple security group management via <a href="https://www.google.com/url?q=https://aws.amazon.com/iam/&sa=D&ust=1537824179083000&usg=AFQjCNG6t8fs_xlDJcwVN7VxZqj9-QcGFg" rel="external" title="Amazon IAM">IAM</a>. Available today are configuration states of the three most popular managed database services across the three main cloud service providers. Each state has been mapped to appropriate HITRUST CSF controls and audited.
+      p In a post-cloud world, configuring a service in a continual state is the goal. The hard part is simply knowing the proper configuration state mapped to a specific control. Modern compliance extends way beyond simple security group management via <a href="https://aws.amazon.com/iam/" rel="external" title="Amazon IAM">AWS Identity and Access Management (IAM)</a>. Available today are configuration states of the three most popular managed database services across the three main cloud service providers. Each state has been mapped to appropriate HITRUST CSF controls and audited.
     .columns.small-12.medium-6.large-4
       ul.no-bullet
         li.group
@@ -191,4 +210,3 @@ section#cta.section-article.container-color--gray-dark-grad
       .callout.drop
         / h3.headline-4.text-center.group Talk to our experts today to discuss your integration challenges.
         = partial "partials/snippets/form", :locals => { :the_form => form_2["custom_form"] }
-
