--- a/source/cloud-compliance-management-system/index.html.slim
+++ b/source/cloud-compliance-management-system/index.html.slim
@@ -32,7 +32,9 @@ section#top.section-article.pad-no-bottom
   .row.align-center
     .columns.small-12.large-8.text-center
       .group
-        h1.headline-2 Continuous Compliance Monitoring for Cloud Services
+        = inline_svg("small/icon-ccms-mag-solid", class: "icon-size--xlarge svg-color--gray-6")
+        h3.headline-5.spaced-out Datica CCMS
+        h1.headline-3 Continuous Compliance Monitoring for Cloud Services
         p.lead = current_page.data.summary
       img.lozad.img-crisp src="#{img_1}?fit=crop&w=1800&h=800&f=top_left&q=5" data-src="#{img_1}?fit=crop&w=1800&h=800&f=top_left" alt="CCMS screenshot"
 
@@ -195,18 +197,8 @@ section#cta.section-article.container-color--gray-dark-grad
   .row.align-center.align-middle
     .columns.small-12.medium-6.large-5
       h2.headline-3 Datica CCMS is generally available October 29th, 2018.
-      p.lead.group--2x Sign up to be notified of the release and to help prioritize service configurations. Registrants have the chance to be included in a private preview.
-      / = partial("partials/cards/quote-customer", :locals => { :customer => data.site.customers['66BznN8Y482iSswswQAice'], :classes => "container-color--tint-50 " })
-      .callout.callout--dark-alpha
-        blockquote.quote--serif
-          | The Datica team is helping us solve critical infrastructure and scaling problems faster and more competently than we can in-house.
-        .media-object.card-person
-          .media-object-section
-            img.avatar.avatar--large.circle alt=("Jon Pearce") src="https://images.ctfassets.net/189dvqdsjh46/6IUA5I8suWEWI28YcIkMgm/134af76338fd572e45a9d4a716a8ddb7/headshot-zipnosis.jpg" /
-          .media-object-section.main-section.align-self-middle
-            h4.person-name Jon Pearce
-            p.person-title CEO, Zipnosis
-    #form.columns.small-12.medium-large-6.large-4
+      p.lead.group--2x Sign up to be notified of the release and to help prioritize service configurations. Registrants have the chance to be included in a private preview.      
+    #cta-form.columns.small-12.medium-large-6.large-4
       .callout.drop
         / h3.headline-4.text-center.group Talk to our experts today to discuss your integration challenges.
         = partial "partials/snippets/form", :locals => { :the_form => form_2["custom_form"] }
