--- a/source/assets/scss/modules/cards.scss
+++ b/source/assets/scss/modules/cards.scss
@@ -58,11 +58,11 @@
 
         // }
     }
-    &-section {
-        p, li {
-            @include hyphens(auto);
-        }
-    }
+    // &-section {
+    //     p, li {
+    //         @include hyphens(auto);
+    //     }
+    // }
     &-divider {
         display: block; // overrides global-flexbox: true in settings:268. Not sure how this setting will play out (which components are flexbox-enabled? - AW)
     }
