--- a/source/cloud-compliance-management-system/index.html.slim
+++ b/source/cloud-compliance-management-system/index.html.slim
@@ -14,13 +14,11 @@ priority: "0.9"
 ---
 ruby:
   current_page.data.share_image = image_share_platform
-  the_form = data.site.forms['54agWFbPVYog62Ugg64ocW']
+  the_form = data.site.forms['1sd7ExrRIkg0SgQ0CsiiaO']
   img_1 = 'https://images.ctfassets.net/189dvqdsjh46/41KHEMRsg8CeGiO2cSawU8/1d95703cc95b4ca18660e95a105f1345/ccms--compliance-checks.jpg'
   img_2 = 'https://images.ctfassets.net/189dvqdsjh46/1KxUwvIiuE4gEaeqUSIgq4/a4b9c86fda34d160d94bdd55c766b2e5/ccms-diagram.png'
   diagram_1 = "https://images.ctfassets.net/189dvqdsjh46/1DnnFdmBAYcWSyiGE2M6aK/1651ceeb1d2343007b09a5ce4c20ed38/c3-diagram-1.png"
   diagram_2 = "https://images.ctfassets.net/189dvqdsjh46/iEhDz8im4wyCMCGk0Wcqk/79088104bd888bcb3e9867fb0ccb242a/c3-diagram-2.png"
-  form_1 = data.site.forms['54agWFbPVYog62Ugg64ocW']
-  form_2 = data.site.forms['328pNB4IvCaQWQMCWmgSCy']
 
 / svg aria-hidden="true" data-name="chevron" style=("position: absolute; width: 0; height: 0; overflow: hidden;") xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"
   defs
@@ -32,7 +30,7 @@ section#top.section-article.pad-no-bottom
   .row.align-center
     .columns.small-12.large-8.text-center
       .group
-        = inline_svg("small/icon-ccms-mag", class: "icon-size--xlarge svg-color--gray-6")
+        = inline_svg("icon-ccms-mag", class: "icon-size--xlarge svg-color--gray-6")
         h3.headline-5.spaced-out Datica CCMS
         h1.headline-3 Continuous Compliance Monitoring for Cloud Services
         p.lead = current_page.data.summary
@@ -187,20 +185,22 @@ section#configs.section-article.container-gray-11
     / Here is a prototype disclosure component with some generic utility classes. 
     #survey.disclosure-fade.gradient-gray-11-fade-up
       /= inline_svg("icon-compliance-checklist", :class => "icon-size--large svg-color--white")
-      .margin-auto.small-12.medium-6.large-4
-        .card.container-color--white
+      .margin-auto.small-12.medium-10.large-6
+        .card.container-color--white.drop-light
           .card-section.text-center
-            p.lead Tell us what configurations you would like to see in our quick survey.
-            = partial "partials/snippets/button", :locals => { :label => "Start the survey", :url => "survey", :button_classes => "button", :icon => "icon-chevron-right", :item_id => "ccms_survey" }
+            p We want to make sure the Cloud Compliance Management System has you covered. <strong>Tell us what other cloud configurations you want to see.</strong>
+            = partial "partials/snippets/button", :locals => { :label => "Start the survey", :url => "survey", :button_classes => "button button-inline", :icon => "icon-chevron-right", :item_id => "ccms_survey" }
             / = partial "partials/snippets/form", :locals => { :the_form => form_1["custom_form"], :form_id => "configForm" }
 
 
-section#cta.section-article.container-color--gray-dark-grad
-  .row.align-center.align-middle
+section#cta.section-article.container-color--gray-dark-grad.relative
+  .row.align-center.align-middle.z-stack-10.relative
     .columns.small-12.medium-6.large-5
-      h2.headline-3 Datica CCMS is generally available October 29th, 2018.
+      h2.headline-3 Datica CCMS is coming Q1 2019.
       p.lead.group--2x Sign up to be notified of the release and to help prioritize service configurations. Registrants have the chance to be included in a private preview.      
     #cta-form.columns.small-12.medium-large-6.large-4
       .callout.drop
         / h3.headline-4.text-center.group Talk to our experts today to discuss your integration challenges.
-        = partial "partials/snippets/form", :locals => { :the_form => form_2["custom_form"] }
+        = partial "partials/snippets/form", :locals => { :the_form => the_form["custom_form"] }
+  .absolute.preview-bg.z-stack-0.group
+    img.lozad.img-cover.img-multiply.blur-2 src="#{img_1}?w=250&fm=jpg&q=10" data-src="#{img_1}?w=1000"
