--- a/source/cloud-compliance-management-system/survey.html.slim
+++ b/source/cloud-compliance-management-system/survey.html.slim
@@ -14,56 +14,41 @@ priority: "0.9"
 ---
 ruby:
   current_page.data.share_image = image_share_platform
-  the_form = data.site.forms['54agWFbPVYog62Ugg64ocW']
+  the_form = data.site.forms['6BQxIDIXC0uK8SaeAqMq6O']
   img_1 = 'https://images.ctfassets.net/189dvqdsjh46/41KHEMRsg8CeGiO2cSawU8/1d95703cc95b4ca18660e95a105f1345/ccms--compliance-checks.jpg'
   img_2 = 'https://images.ctfassets.net/189dvqdsjh46/1KxUwvIiuE4gEaeqUSIgq4/a4b9c86fda34d160d94bdd55c766b2e5/ccms-diagram.png'
   diagram_1 = "https://images.ctfassets.net/189dvqdsjh46/1DnnFdmBAYcWSyiGE2M6aK/1651ceeb1d2343007b09a5ce4c20ed38/c3-diagram-1.png"
   diagram_2 = "https://images.ctfassets.net/189dvqdsjh46/iEhDz8im4wyCMCGk0Wcqk/79088104bd888bcb3e9867fb0ccb242a/c3-diagram-2.png"
-  form_1 = data.site.forms['54agWFbPVYog62Ugg64ocW']
-  form_2 = data.site.forms['328pNB4IvCaQWQMCWmgSCy']
 
+scss:
+  input.hs-input {
+    &[type="checkbox"],&[type="radio"] {
+      margin-bottom: 0;
+    }
+  }
+  .hs-form-booleancheckbox-display {
+    font-weight: bold;
+    font-size: 110%;
+    margin-top: 0.5em;
+  }
 / svg aria-hidden="true" data-name="chevron" style=("position: absolute; width: 0; height: 0; overflow: hidden;") xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"
   defs
     symbol#icon-chevron-down viewbox=("0 0 18 18")
       title chevron-down
       path d=("M4.29 5.19L2.83 6.64 9 12.81l6.17-6.17-1.46-1.45L9 9.9z")
-
-section.section-article--med
-  .row.align-center
-    .columns.small-12.large-6.text-center.group
-      = inline_svg("icon-ccms-mag", class: "icon-size--large")
-      h1.headline-2 Datica CCMS
-section#top.section-article
-  .row.align-center
-    .columns.small-12.large-8.text-center
-      .group
-        h1.headline-2 = current_page.data.title
-        p.lead = current_page.data.summary
-
-    .columns.small-12.medium-7.large-4
-      .card.text-center.container-color--blue-alt
-        .card-section
-          = inline_svg("icon-compliance-checklist", :class => "icon-size--large svg-color--white")
-          p.lead.group.hyphens-no Tell us what configurations you would like to see in our quick survey.
-          = partial "partials/snippets/button", :locals => { :label => "Start the survey", :url => "survey", :button_classes => "button button--light", :icon => "icon-chevron-right", :item_id => "ccms_survey" }
-        / = partial "partials/snippets/form", :locals => { :the_form => form_1["custom_form"], :form_id => "configForm" }
-
-section#cta.section-article.container-color--gray-dark-grad
-  .row.align-center.align-middle
-    .columns.small-12.medium-6.large-5
-      h2.headline-3 Datica CCMS is generally available October 29th, 2018.
-      p.lead.group--2x Sign up to be notified of the release and to help prioritize service configurations. Registrants have the chance to be included in a private preview.
-      / = partial("partials/cards/quote-customer", :locals => { :customer => data.site.customers['66BznN8Y482iSswswQAice'], :classes => "container-color--tint-50 " })
-      .callout.callout--dark-alpha
-        blockquote.quote--serif
-          | The Datica team is helping us solve critical infrastructure and scaling problems faster and more competently than we can in-house.
-        .media-object.card-person
-          .media-object-section
-            img.avatar.avatar--large.circle alt=("Jon Pearce") src="https://images.ctfassets.net/189dvqdsjh46/6IUA5I8suWEWI28YcIkMgm/134af76338fd572e45a9d4a716a8ddb7/headshot-zipnosis.jpg" /
-          .media-object-section.main-section.align-self-middle
-            h4.person-name Jon Pearce
-            p.person-title CEO, Zipnosis
-    #form.columns.small-12.medium-large-6.large-4
-      .callout.drop
-        / h3.headline-4.text-center.group Talk to our experts today to discuss your integration challenges.
-        = partial "partials/snippets/form", :locals => { :the_form => form_2["custom_form"] }
+.container-gray-12
+  section.section-article--med
+    .row.align-center
+      .columns.small-12.large-6.text-center.group
+        = inline_svg("icon-ccms-mag", class: "icon-size--large")
+        h2.headline-5.spaced-out
+          a href="./" title="Back to Datica CCMS" Datica CCMS
+    .row.align-center
+      .columns.small-12.medium-10.large-6
+        .group.text-center
+          h1.headline-2 = current_page.data.title
+          p We want to make sure the Cloud Compliance Management System has you covered. <strong>Tell us what other cloud configurations you want to see.</strong>
+        #form
+          .callout
+            / h3.headline-4.text-center.group Talk to our experts today to discuss your integration challenges.
+            = partial "partials/snippets/form", :locals => { :the_form => the_form["custom_form"] }
