A few image tweaks

--- a/source/assets/scss/mixins/functions.scss
+++ b/source/assets/scss/mixins/functions.scss
@@ -105,8 +105,8 @@ $underline: false !default;
     box-shadow: $s;
 }
 
-@mixin blur($radius){ // covers most browsers...FF needs JS for this I think. http://codepen.io/ebellempire/pen/rnvEK
-    $r: $radius * 1px;
+@mixin blur($r){ // covers most browsers...FF needs JS for this I think. http://codepen.io/ebellempire/pen/rnvEK
+    // $r: $radius * 1px;
     filter: blur($r); /* Someday, sigh ... */
     -webkit-filter: blur($r); /* Prefixed CSS3 blur filters */
     -moz-filter: blur($r);
