--- a/source/cloud-compliance-management-system/index.html.slim
+++ b/source/cloud-compliance-management-system/index.html.slim
@@ -54,39 +54,6 @@ section#api.section-article.pad-no-bottom.container-gray-11.drop-taper
     .columns.small-12.large-10.text-center
       img.lozad.img-crisp src="#{img_2}?w=792&fm=jpg&q=10&bg=rgb:e5e9eb" data-src="#{img_2}?w=1800" alt="CCMS features"
 
-/  .row.align-left.small-up-1.medium-up-2
-    .column
-      h4.headline-4 Continuous Monitoring
-      p Datica CCMS is connected directly to your cloud provider account - programmatically receiving steaming updates.
-    .column
-      h4.headline-4 Attestation Tools
-      p Proving compliance is a critical step in actually achieving compliance. With the CCMS, users can provide auditors a digital papertrail of their cloud environment configuration over time.
-    .column
-      h4.headline-4 Risk and Incident Details
-      p When checks fail in the CCMS they don’t fail silently. With a robust notification system, users are made aware of compliance events as they happen.
-    .column
-      h4.headline-4 Remediation Guidance
-      p A failed check requires remediation. Leaving a system misconfigured can result in not only a failed audit, but places your end user’s data at risk. With Datica CCMS, users can see exactly how to remedy failed checks with step by step guides.
-    .column
-      h4.headline-4 Historical Reporting
-      p With historical monitoring, users can build and scope reports to fit their auditing needs, providing concrete evidence of compliance overtime.
-/section#api.section-article.pad-no-bottom.container-gray-11.drop-taper
-  .row.align-center
-    .columns.small-12.large-8.text-center
-      h2.headline-2 API-Driven Compliance
-  .row.align-center
-    .columns.small-12.medium-4.medium-order-2
-      .group
-        h3.headline-4 Real Time
-        p Datica CCMS checks configuration states every day and tracks the states in a historical data model. This is the missing piece for modern cloud compliance: Constant understanding of the precise state of your cloud environments.
-      .group
-        h3.headline-4 Audited
-        p Each configuration supported by Datica CCMS has been audited against HITRUST CSF v9.1, meaning a configuration is guaranteed to be compliant against the regimes of HIPAA, GDPR, and GxP. It tracks configuration changes with each CSF update.
-      .group
-        h3.headline-4 Uniquely Dynamic
-        p The cloud is a dynamic world and compliance struggles to keep up. Datica CCMS is the only tool available to assess assurance of managed and microservices against critical compliance controls. It gives customers a strategy for the future.
-    .columns.small-12.medium-8.medium-order-1
-      img.lozad.img-crisp src="#{img_2}?w=792&fm=jpg&q=10&bg=rgb:e5e9eb" data-src="#{img_2}?w=1800" alt="CCMS features"
 
 section#cloud-info.container-color--white
   .section-article
@@ -96,7 +63,7 @@ section#cloud-info.container-color--white
         p.lead The proliferation of abstracted cloud services has increased in an effort to improve developer experience (a good thing). As a result, most cloud environments are a constellation of managed services and microservices. The cloud is no longer simply an operating system on someone else's hard drive.
         p.lead But increased abstraction has meant greater control has been taken away from the end user's ability to attest to compliance assurances (a bad thing). The entire layer of "Services" on top of traditional VMs has completely changed how compliance should be measured, monitored, and managed.
         p
-          em Images from the book,
+          em Images from the book, 
           a href="https://completecloudcompliance.com" title="Complete Cloud Compliance Book" Complete Cloud Compliance.
   aside.row.collapse
     .columns.small-12
@@ -147,7 +114,7 @@ section#hitrust.section-article.container-gray-12
 section#configs.section-article.container-gray-11
   .row.align-center
     .columns.small-12.large-8
-      h2.headline-3.group.text-center Coming soon—dozens more configurations on the way
+      h2.headline-3.group.text-center Coming soon — more configurations on the way
   .row.align-center.relative
     .columns.small-12.medium-4.large-3.large-offset-2.group
       h4.headline-5 AWS
@@ -193,10 +160,10 @@ section#configs.section-article.container-gray-11
             / = partial "partials/snippets/form", :locals => { :the_form => form_1["custom_form"], :form_id => "configForm" }
 
 
-section#cta.section-article.container-color--gray-dark-grad.relative
+section#cta.section-article.container-color--gray-dark-grad.relative(style="overflow: hidden;")
   .row.align-center.align-middle.z-stack-10.relative
     .columns.small-12.medium-6.large-5
-      h2.headline-3 Datica CCMS is coming Q1 2019.
+      h2.headline-3 Datica CCMS is coming in early 2019.
       p.lead.group--2x Sign up to be notified of the release and to help prioritize service configurations. Registrants have the chance to be included in a private preview.      
     #cta-form.columns.small-12.medium-large-6.large-4
       .callout.drop
@@ -204,3 +171,39 @@ section#cta.section-article.container-color--gray-dark-grad.relative
         = partial "partials/snippets/form", :locals => { :the_form => the_form["custom_form"] }
   .absolute.preview-bg.z-stack-0.group
     img.lozad.img-cover.img-multiply.blur-4 src="#{img_1}?w=250&fm=jpg&q=10" data-src="#{img_1}?w=1000"
+
+
+/ extra content
+/  .row.align-left.small-up-1.medium-up-2
+    .column
+      h4.headline-4 Continuous Monitoring
+      p Datica CCMS is connected directly to your cloud provider account - programmatically receiving steaming updates.
+    .column
+      h4.headline-4 Attestation Tools
+      p Proving compliance is a critical step in actually achieving compliance. With the CCMS, users can provide auditors a digital papertrail of their cloud environment configuration over time.
+    .column
+      h4.headline-4 Risk and Incident Details
+      p When checks fail in the CCMS they don’t fail silently. With a robust notification system, users are made aware of compliance events as they happen.
+    .column
+      h4.headline-4 Remediation Guidance
+      p A failed check requires remediation. Leaving a system misconfigured can result in not only a failed audit, but places your end user’s data at risk. With Datica CCMS, users can see exactly how to remedy failed checks with step by step guides.
+    .column
+      h4.headline-4 Historical Reporting
+      p With historical monitoring, users can build and scope reports to fit their auditing needs, providing concrete evidence of compliance overtime.
+/section#api.section-article.pad-no-bottom.container-gray-11.drop-taper
+  .row.align-center
+    .columns.small-12.large-8.text-center
+      h2.headline-2 API-Driven Compliance
+  .row.align-center
+    .columns.small-12.medium-4.medium-order-2
+      .group
+        h3.headline-4 Real Time
+        p Datica CCMS checks configuration states every day and tracks the states in a historical data model. This is the missing piece for modern cloud compliance: Constant understanding of the precise state of your cloud environments.
+      .group
+        h3.headline-4 Audited
+        p Each configuration supported by Datica CCMS has been audited against HITRUST CSF v9.1, meaning a configuration is guaranteed to be compliant against the regimes of HIPAA, GDPR, and GxP. It tracks configuration changes with each CSF update.
+      .group
+        h3.headline-4 Uniquely Dynamic
+        p The cloud is a dynamic world and compliance struggles to keep up. Datica CCMS is the only tool available to assess assurance of managed and microservices against critical compliance controls. It gives customers a strategy for the future.
+    .columns.small-12.medium-8.medium-order-1
+      img.lozad.img-crisp src="#{img_2}?w=792&fm=jpg&q=10&bg=rgb:e5e9eb" data-src="#{img_2}?w=1800" alt="CCMS features"
