--- a/source/cloud-compliance-management-system/survey.html.slim
+++ b/source/cloud-compliance-management-system/survey.html.slim
@@ -46,9 +46,9 @@ scss:
     .row.align-center
       .columns.small-12.medium-10.large-6
         .group.text-center
-          h1.headline-2 = current_page.data.title
+          h1.headline-3 = current_page.data.title
           p We want to make sure the Cloud Compliance Management System has you covered. <strong>Tell us what other cloud configurations you want to see.</strong>
         #form
-          .callout
+          .callout.pad--lg
             / h3.headline-4.text-center.group Talk to our experts today to discuss your integration challenges.
             = partial "partials/snippets/form", :locals => { :the_form => the_form["custom_form"] }
