Updated new cloud service guides; testbed for markdown moved to seldon

--- a/source/cloud-compliance-management-system/index.html.slim
+++ b/source/cloud-compliance-management-system/index.html.slim
@@ -90,21 +90,21 @@ section#hitrust.section-article.container-gray-12
     .columns.small-12.medium-6.large-4
       ul.no-bullet
         li.group
-          a.media-object.align-middle.container-color--white.drop.radius href="" title="AWS RDS Guide"
+          a.media-object.align-middle.container-color--white.drop.radius href="/academy/aws-rds-guide-how-to-configure-rds-to-comply-with-hipaa-and-hitrust" title="AWS RDS Guide"
             .media-object-section
               - img_rds = "https://images.ctfassets.net/189dvqdsjh46/3Ml0plud3iWwgikOGEECi6/fe49398f8baeb5593ebb39bd10f637e9/guide-aws-rds.jpg"
               img.img-cover.icon-size--xlarge.lozad src=img_rds data-src=img_rds alt="AWS RDS Guide"
             .media-object-section
               h4.headline-5 AWS RDS Guide
         li.group
-          a.media-object.align-middle.container-color--white.drop.radius href="" title="Azure CosmosDB Guide"
+          a.media-object.align-middle.container-color--white.drop.radius href="/academy/azure-cosmos-db-guide-how-to-configure-cosmos-db-to-comply-with-hipaa-and-hitrust" title="Azure CosmosDB Guide"
             .media-object-section
               - img_az = "https://images.ctfassets.net/189dvqdsjh46/3plStwctlKGM2Mg0sWIIMm/bfe93306bd50af4a08a19937882b3724/guide-azure-cosmos.jpg"
               img.img-cover.icon-size--xlarge.lozad src=img_az data-src=img_az alt="Azure CosmosDB Guide"
             .media-object-section
               h4.headline-5 Azure CosmosDB Guide
         li.group
-          a.media-object.align-middle.container-color--white.drop.radius href="" title="GCP Cloud SQL Guide"
+          a.media-object.align-middle.container-color--white.drop.radius href="/academy/google-cloud-sql-guide-how-to-configure-gcp-cloud-sql-to-comply-with-hipaa" title="GCP Cloud SQL Guide"
             .media-object-section
               - img_gcp = "https://images.ctfassets.net/189dvqdsjh46/5Pwsy82W4g2i2AOKoGiMyO/ae8de7bf28cb3d28b1e65401ed4bb290/guide-gcp-sql.jpg"
               img.img-cover.icon-size--xlarge.lozad src=img_gcp data-src=img_gcp alt="GCP Cloud SQL Guide"
