Misc CCMS, Academy work Tasks: https://github.com/daticahealth/seldon-middleman/projects/2

--- a/source/contentful_templates/academy.html.erb
+++ b/source/contentful_templates/academy.html.erb
@@ -95,20 +95,22 @@ end
             </div>
             <aside class="columns small-12 large-4 section--sidebar" data-sticky-container>
                 <div class="sticky" data-sticky data-sticky-on="large" data-options="anchor: content;">
-                <% if p.has_key?("related_guide") %>
-                    <div class="group">
-                    <%= partial "partials/cards/card-report", :locals => { :post => p.related_guide, :style => "white", :size => "small", :desc => true, :show_button => true } %>
-                    </div>
-                <% else %>
-                    <% sorted_guides = data.site.guides.to_a.sort_by{ |id, guides| guides['_meta']['created_at'] }.reverse! %>
-                    <% sorted_guides.take(1).each do | id, guide_entry | %>
+                    <div id="toc-sidebar" class="group article-toc show-for-large"></div>
+                    <% if p.has_key?("related_guide") %>
                         <div class="group">
-                        <%= partial "partials/cards/card-report", :locals => { :post => guide_entry, :style => "white", :size => "small", :desc => true, :show_button => true } %>
+                        <%= partial "partials/cards/card-report", :locals => { :post => p.related_guide, :style => "white", :size => "small", :desc => true, :show_button => true } %>
                         </div>
+                    <% else %>
+                    <% sorted_guides = data.site.guides.to_a.sort_by{ |id, guides| guides['_meta']['created_at'] }.reverse! %>
+                        <% sorted_guides.take(1).each do | id, guide_entry | %>
+                            <div class="group">
+                            <%= partial "partials/cards/card-report", :locals => { :post => guide_entry, :style => "white", :size => "small", :desc => true, :show_button => true } %>
+                            </div>
+                        <% end %>
                     <% end %>
-                <% end %>
-                <div class="text-center"><%= inline_svg("icon-book-academy", class: "icon-size--medium svg-color--gray-6") %></div>
-                <div id="toc-sidebar" class="group article-toc show-for-large"></div>                                  
+                    <%#<div class="text-center">
+                        <%#= inline_svg("icon-book-academy", class: "icon-size--medium svg-color--gray-6") %>
+                    <%#</div>%>                              
                 </div>
             </aside>
         </div>
