Nav updates: https://github.com/daticahealth/seldon-middleman/projects/2#card-13508164 https://github.com/daticahealth/seldon-middleman/projects/2#card-13508150
figure > img display: block

--- a/source/assets/scss/modules/images.scss
+++ b/source/assets/scss/modules/images.scss
@@ -8,6 +8,9 @@
 // these are often created by article.js
 figure {
     margin: 1rem 0 1.5rem 0;
+    img { // these are always images, inline in articles, should typically be full-width in body. 
+        display: block;
+    }
 }
 figcaption{
     font: {
