--- a/source/partials/snippets/_alert-ribbon.slim
+++ b/source/partials/snippets/_alert-ribbon.slim
@@ -11,7 +11,7 @@
 - event_img = 'https://images.ctfassets.net/189dvqdsjh46/7cYrQDOpgcCksAUKIsQaSY/16c232603bc61794d7a408bc4223a159/webinar-c3-promo-ribbon-desktop.png'
 - event_url = '/webinars/what-really-is-compliance/'
 
-aside id="alertTop" style="background-color: #373D50; height: 3rem;" class="hide dismiss full-width alert-ribbon text-center" data-closable=""
+/aside id="alertTop" style="background-color: #373D50; height: 3rem;" class="hide dismiss full-width alert-ribbon text-center" data-closable=""
   a.dismiss(href=event_url title=event_title)
     img.lozad data-src="#{event_img}" alt=event_title /
   .row.align-center
