--- a/source/partials/content/_recent-items.slim
+++ b/source/partials/content/_recent-items.slim
@@ -9,7 +9,7 @@ ruby:
   h3.headline-3 <strong>Recently</strong> at Datica
 .row.full-width.align-center.small-up-1.medium-up-2.large-up-3.xlarge-up-4
   - sorted_guides.take(1).each do | id, guide_entry |
-    .column
+    .column.hide-for-large-only
       = partial "partials/cards/card-report", :locals => { :post => guide_entry, :style => "dark", :size => "small" }
   - sorted_posts.take(1).each do | id, blog_entry |
     .column
