IAM copy change CCMS

--- a/source/cloud-compliance-management-system/index.html.slim
+++ b/source/cloud-compliance-management-system/index.html.slim
@@ -84,9 +84,9 @@ section#cloud-info.container-color--white
 section#hitrust.section-article.container-gray-12
   .row.align-center.align-middle
     .columns.small-12.medium-6.large-6
-      h2.headline-3 Make any cloud service HITRUST certified
+      h2.headline-3 Make any cloud service compliant
       p.lead The compliant configuration states of cloud services should not be proprietary. Transparency is fundamental to healthcare's transformation. Every service monitored by the CCMS will be publicly documented to help empower healthcare developers.
-      p In a post-cloud world, configuring a service in a continual state is the goal. The hard part is simply knowing the proper configuration state mapped to a specific control. Modern compliance extends way beyond simple security group management via <a href="https://aws.amazon.com/iam/" rel="external" title="Amazon IAM">AWS Identity and Access Management (IAM)</a>. Available today are configuration states of the three most popular managed database services across the three main cloud service providers. Each state has been mapped to appropriate HITRUST CSF controls and audited.
+      p In a post-cloud world, configuring a service in a continual state is the goal. The hard part is simply knowing the proper configuration state mapped to a specific control. Modern compliance extends way beyond simple security group management, which is what existing tools do. Available today are configuration states of the three most popular managed database services across the three main cloud service providers. Each state has been mapped to appropriate HITRUST CSF controls and audited.
     .columns.small-12.medium-6.large-4
       ul.no-bullet
         li.group
