About page copy

--- a/source/about/index.html.erb
+++ b/source/about/index.html.erb
@@ -23,13 +23,13 @@ layout: company
             <div class="callout drop">
                 <div class="block">
                     <h4 class="inline-highlight">Why We Exist</h4>
-                    <h2 class="headline-3">Solving Compliance on the Cloud</h2>
-                    <p>The complexity of compliance on the cloud is holding back the adoption of cloud native technology in highly regulated industries. By removing compliance as a concern, we do our part to help propel technology transformation in industries that lag behind.</p>
+                    <h2 class="headline-3">Empowering Digital Health Success</h2>
+                    <p>The complexity of compliance on the cloud is holding back the adoption of cloud native technology in highly regulated industries. By removing compliance as a concern, we do our part to help propel technology transformation in industries that lag behind. But digital health faces a multi-faceted problem, which is why we published the Digital Health Success Framework. Helping to address these challenges is why we extend our expertise into other infrastructure-related problems, like interoperability with Electronic Medical Records.</p>
                 </div>
                 <div class="block">
                     <h4 class="inline-highlight">What We Are</h4>
-                    <h2 class="headline-3">The Most Secure and Compliant Kubernetes Cluster Possible</h2>
-                    <p>The hardest part about compliance on the cloud is between the physical infrastructure (which is the responsibility of AWS, Azure, or GCP) and your application. In another words, the operating system layer of cloud native architectures. We solve that by making Kubernetes perfectly compliant to the standards of global compliance regimes.</p>
+                    <h2 class="headline-3">The Most Secure and Compliant Infrastructure Possible</h2>
+                    <p>The hardest part about compliance on the cloud is between the physical infrastructure (which is the responsibility of AWS, Azure, or GCP) and your application. In another words, the operating system layer of cloud native architectures. We solve that by helping you address your attestation responsibilities with a suite of products built to fit your specific use case on the cloud.</p>
                 </div>
                 <div class="block">
                     <h4 class="inline-highlight">How We Do It</h4>
