--- a/source/about/index.html.erb
+++ b/source/about/index.html.erb
@@ -161,6 +161,20 @@ layout: company
                         Datica joins the Cloud Native Computing Foundation.
                     </div>
                 </div>
+                <div class="block">
+                    <div class="date"><span>September 2018</span></div>
+                    <span class="dot"></span>
+                    <div class="content">
+                        The <a href="https://completecloudcompliance.com" title="get the book">Complete Cloud Compliance</a> book is published.
+                    </div>
+                </div>
+                <div class="block">
+                    <div class="date"><span>October 2018</span></div>
+                    <span class="dot"></span>
+                    <div class="content">
+                        Datica announces the <a href="/cloud-compliance-management-system" title="CCMS">Cloud Compliance Management System</a> (CCMS), giving customers constant visibility of the precise state of their cloud environments.
+                    </div>
+                </div>
             </div>
         </div>
     </div>
