Typo for pricing

--- a/source/pricing/index.html.slim
+++ b/source/pricing/index.html.slim
@@ -59,7 +59,7 @@ priority: "1.0"
                   h4.headline-5 
                     = inline_svg("small/icon-check-circle", class: "icon-inline icon-left svg-color--green-glow")
                     | Resource Subscription
-                  p Starting early 2019, customer can use the CCMS by subscribing per cloud service being monitored.
+                  p Starting early 2019, customers can use the CCMS by subscribing per cloud service being monitored.
               #cta.columns.small-12.medium-large-6
                 .callout.pad.drop.form-embed.nomargin.pricing-form.group
                   h3.headline-4.text-center Request Pricing
