--- a/source/assets/scss/settings.scss
+++ b/source/assets/scss/settings.scss
@@ -171,6 +171,13 @@ $color-slugs: (
     purple-grad
 );
 
+$product-colors: (
+    cks: #9A0BFF,
+    cmi: #6E52FF,
+    cpaas: #498CFF,
+    ccms: #25C6FF
+);
+
 // Art Directed Colors !! Use these sparingly and wisely
 // Datica 2017 neons, baby
 
