--- a/source/assets/scss/modules/overrides.scss
+++ b/source/assets/scss/modules/overrides.scss
@@ -89,11 +89,32 @@
 //     &-bottom {margin-bottom:  0};
 //     &-left   {margin-left:    0};
 // }
+
+.pad {
+    $gap: 1.5vw;
+    padding: $gap;
+    &--sm {
+        padding: $gap * 0.6;
+    }
+    &--lg { // moar spacing!
+        padding: $gap * 1.5 !important;
+    }
+    &--xl { // moar spacing!
+        padding: $gap * 2;
+        padding: calc(0.5rem + 3vw);
+    }
+}
+
 .pad-no {
 //     &-top    {padding-top:    0;}
 //     &-right  {padding-right:  0;}
     &-bottom {padding-bottom: 0;}
 //     &-left   {padding-left:   0;}
+}
+.block { // useful when you need to cap the width of a person widget, etc.
+    &-width-medium {
+        max-width: 14rem;
+    }
 }
 .implode{
     margin: 0px;
