Fix for #90 - marginTop option https://foundation.zurb.com/sites/docs/sticky.html#js-options

--- a/source/contentful_templates/blog.html.erb
+++ b/source/contentful_templates/blog.html.erb
@@ -108,7 +108,7 @@ end
             <% end %>
         </div>
         <aside class="columns small-12 large-4 section--sidebar" data-sticky-container>
-            <div class="sticky" data-sticky data-options="anchor: blogPost; stickyOn: xlarge;">
+            <div class="sticky" data-sticky data-options="anchor: blogPost; stickyOn: xlarge; marginTop: 5;">
                 <%= partial "/partials/snippets/share", :locals => { :p => p, :classes => "align-center hide-for-xlarge" }  %>
                 <div class="group">
                     <%= partial "blog/partials/blog-subscription", :locals => { :color => "gray" } %>
