--- a/source/compliant-managed-integration/index.html.slim
+++ b/source/compliant-managed-integration/index.html.slim
@@ -80,39 +80,47 @@ section.section-article
     .columns.small-12.large-6.text-center.group
       h3.headline-3 More than just an API
       p.lead The full suite of integration tooling you need to successfully complete an integration project with a clinical site.
-  .row.small-up-2.medium-up-3.large-up-4.align-center
-    .columns
-      .callout.callout--stretch.callout--gray-light
-        h4.headline-5 Connect to any  EHR or system
-        p You'll never have to think twice about whether your project will be supported.
-    .columns
-      .callout.callout--stretch.callout--gray-light
-        h4.headline-5 True scalability
-        p With a toolset on Datica CKS, integrations scale as you scale.
-    .columns
-      .callout.callout--stretch.callout--gray-light
-        h4.headline-5 HIPAA compliant infrastructure
-        p Compliance is a requirement for all data exchange. Never worry about it again.
-    .columns
-      .callout.callout--stretch.callout--gray-light
-        h4.headline-5 Security baked-in from the start
-        p HL7, FHIR, APIs—security is inherently unavailable. We add a security layer to your integration.
-    .columns
-      .callout.callout--stretch.callout--gray-light
-        h4.headline-5 FHIR-proof your app
-        p The future of healthcare data exchange is FHIR. You are ready for the switch when it happens.
-    .columns
-      .callout.callout--stretch.callout--gray-light
-        h4.headline-5 24/7 monitoring
-        p Mission critical data has important uptime requirements. Datica monitors the connection for you.
-    .columns
-      .callout.callout--stretch.callout--gray-light
-        h4.headline-5 Highly available
-        p The hard work to ensuring cloud-based infrastructure is highly available 24/7 is done for you.
-    .columns
-      .callout.callout--stretch.callout--gray-light
-        h4.headline-5 Open source transformations
-        p You own your transformations because we use open source Mirth as the interface engine.
+  .row.row--card-grid.small-up-1.medium-up-2.large-up-4.align-center
+    .column
+      .card
+        .card-section
+          h4.headline-5 Connect to any  EHR or system
+          p You'll never have to think twice about whether your project will be supported.
+    .column
+      .card
+        .card-section
+          h4.headline-5 True scalability
+          p With a toolset on Datica CKS, integrations scale as you scale.
+    .column
+      .card
+        .card-section
+          h4.headline-5 HIPAA compliant infrastructure
+          p Compliance is a requirement for all data exchange. Never worry about it again.
+    .column
+      .card
+        .card-section
+          h4.headline-5 Security baked-in from the start
+          p HL7, FHIR, APIs—security is inherently unavailable. We add a security layer to your integration.
+    .column
+      .card
+        .card-section
+          h4.headline-5 FHIR-proof your app
+          p The future of healthcare data exchange is FHIR. You are ready for the switch when it happens.
+    .column
+      .card
+        .card-section
+          h4.headline-5 24/7 monitoring
+          p Mission critical data has important uptime requirements. Datica monitors the connection for you.
+    .column
+      .card
+        .card-section
+          h4.headline-5 Highly available
+          p The hard work to ensuring cloud-based infrastructure is highly available 24/7 is done for you.
+    .column
+      .card
+        .card-section
+          h4.headline-5 Open source transformations
+          p You own your transformations because we use open source Mirth as the interface engine.
 
 section.section-article.container-gray-5.text-center
   .row.align-center
