Minor polish in blog, content areas, academy view templates

--- a/source/contentful_templates/academy.html.erb
+++ b/source/contentful_templates/academy.html.erb
@@ -68,7 +68,7 @@ end
                 <% end %>
                 <% if p.has_key?("related_entries") %>
                     <h4 class="headline-5 text--spaced text-center">Related Academy Articles</h4>
-                    <aside class="row small-up-1 medium-up-2 group">
+                    <aside class="row row--gutter-small small-up-1 medium-up-2 group">
                         <% p["related_entries"].each do | relatedPost | %>
                         <% 
                         # mapping content type to paths. How could this be a ruby helper or function?
