--- a/source/partials/snippets/_share.erb
+++ b/source/partials/snippets/_share.erb
@@ -1,27 +1,27 @@
 <ul class="share-icons menu<% if defined?(classes) %> <%= classes %><% end %>">
     <%# <li class="share--item">
-    	<svg class="share--icon-top" viewBox="0 0 32 32" preserveAspectRatio="xMidYMid meet">
+    	<svg class="share--icon-top" viewBox="0 0 32 32" width="32" height="32" preserveAspectRatio="xMidYMid meet">
 			<use xlink:href="/public/icons/util-icons-sprite.svg#icon-share"></use>
 		</svg>
     </li>
     %>
     <li class="share--item">
-    	<svg class="share--icon icon-size--medium sharer" viewBox="0 0 32 32" preserveAspectRatio="xMidYMid meet" data-sharer="twitter" data-title="<%= current_page.data.title %>" data-hashtags="healthcare" data-url="<%= site_url + current_page.url %>" data-image="<%= current_page.data.share_image %>">
+    	<svg class="share--icon icon-size--medium sharer" viewBox="0 0 32 32" width="32" height="32" preserveAspectRatio="xMidYMid meet" data-sharer="twitter" data-title="<%= current_page.data.title %>" data-hashtags="healthcare" data-url="<%= site_url + current_page.url %>" data-image="<%= current_page.data.share_image %>">
 			<use xlink:href="/public/icons/util-icons-sprite.svg#icon-twitter"></use>
 		</svg>
 	</li>
     <li class="share--item">
-    	<svg class="share--icon icon-size--medium sharer" viewBox="0 0 32 32" preserveAspectRatio="xMidYMid meet" data-sharer="linkedin" data-url="<%= site_url + current_page.url %>">
+    	<svg class="share--icon icon-size--medium sharer" viewBox="0 0 32 32" width="32" height="32" preserveAspectRatio="xMidYMid meet" data-sharer="linkedin" data-url="<%= site_url + current_page.url %>">
 			<use xlink:href="/public/icons/util-icons-sprite.svg#icon-linkedin"></use>
 		</svg>
 	</li>
     <li class="share--item">
-    	<svg class="share--icon icon-size--medium sharer" viewBox="0 0 32 32" preserveAspectRatio="xMidYMid meet" data-sharer="facebook" data-url="<%= site_url + current_page.url %>">
+    	<svg class="share--icon icon-size--medium sharer" viewBox="0 0 32 32" width="32" height="32" preserveAspectRatio="xMidYMid meet" data-sharer="facebook" data-url="<%= site_url + current_page.url %>">
 			<use xlink:href="/public/icons/util-icons-sprite.svg#icon-facebook"></use>
 		</svg>
 	</li>
     <li class="share--item">
-    	<svg class="share--icon icon-size--medium sharer" viewBox="0 0 32 32" preserveAspectRatio="xMidYMid meet" data-sharer="email" data-title="<%= current_page.data.title %>" data-subject="<%= current_page.data.title %>" data-url="<%= site_url + current_page.url %>">
+    	<svg class="share--icon icon-size--medium sharer" viewBox="0 0 32 32" width="32" height="32" preserveAspectRatio="xMidYMid meet" data-sharer="email" data-title="<%= current_page.data.title %>" data-subject="<%= current_page.data.title %>" data-url="<%= site_url + current_page.url %>">
 			<use xlink:href="/public/icons/util-icons-sprite.svg#icon-email"></use>
 		</svg>
 	</li>
