--- a/source/assets/scss/modules/content.scss
+++ b/source/assets/scss/modules/content.scss
@@ -7,7 +7,16 @@ article.content-dynamic {
 // these article-level overrides for unstyled content from CMS (contentful). Apply this class on <article> or other spots you need these styles.
 .content {
     &-dynamic {
-        p + h2, p + h3, p + h4 { // add a bit of space above headers preceded by <p>
+        // h2, h3, h4, h5 {
+        //     margin-top: 1.5em;
+        // }
+        // & > :first-child h2 {
+        //     margin-top: 0;
+        // }
+        p + h2, p + h3, p + h4, 
+        ul + h2, ul + h3, ul + h4, 
+        ol + h2, ol + h3, ol + h4, 
+        table + h2, table + h3, table + h4 { // add a bit of space above headers preceded by <p>
             margin-top: 1em; // type stuff in content-dynamic is em units - relative units valid here
         }
         p img {
@@ -24,6 +33,13 @@ article.content-dynamic {
         }
         a { // like to see this become the standard everywhere. no links < 500 weight! -AW
             font-weight: $font-weight-mid;
+        }
+        ul, ol {
+            margin-left: calc(0.8rem + 2vw);
+        }
+        li {
+            line-height: 1.4;
+            margin-bottom: 0.5em;
         }
         // reset sizes to headline classes; bump them down a notch
         h1 { @extend .headline-2; }
