Replaced Font-awesome icon (almost all gone yay) with new SVG icon. Waypoint could be a component/partial/helper at some point.

--- a/source/assets/scss/views/dhsf.scss
+++ b/source/assets/scss/views/dhsf.scss
@@ -86,7 +86,7 @@ $strip-width: 2vw;
             color: black;
             opacity: 0.5; // set to 1 when section is active
             transition: all 200ms ease;
-
+            margin-bottom: 0.5rem;
         }
         // }
         &--lead {
