--- a/source/dhsf/index.html.erb
+++ b/source/dhsf/index.html.erb
@@ -47,7 +47,7 @@ smoothScroll: false
                 Explore the framework
             </div>
             <a href="#content" class="pulse" title="Explore the framework" data-smooth-scroll>
-                <i class="waypoint-icon fa fa-icon fa-4x fa-angle-down"></i>
+                <%= inline_svg("icon-angle-down-large", class: "icon-size--large waypoint-icon") %>
             </a>
         </div>
     </section>
@@ -218,7 +218,7 @@ smoothScroll: false
                 Go Further
             </div>
             <a href="#cta" class="pulse" title="Learn more" data-smooth-scroll data-animation-duration="200" data-animation-easing="swing">
-                <i class="waypoint-icon fa fa-icon fa-4x fa-angle-down"></i>
+                <%= inline_svg("icon-angle-down-large", class: "icon-size--large waypoint-icon") %>
             </a>
         </div>
 
