added ID for link target.

--- a/source/dhsf/index.html.erb
+++ b/source/dhsf/index.html.erb
@@ -223,7 +223,9 @@ smoothScroll: false
         </div>
 
     </section>
+    <aside id="cta">
     <%= partial "partials/section-promos/report-promo-latest" %>
+    </aside>
 
 </div>
 <%#= partial "partials/snippets/footer" %>
