Minor change to waypoints - easing values

--- a/source/dhsf/index.html.erb
+++ b/source/dhsf/index.html.erb
@@ -46,7 +46,7 @@ smoothScroll: false
             <div class="waypoint-title subhead--small">
                 Explore the framework
             </div>
-            <a href="#content" class="pulse" title="Explore the framework" data-smooth-scroll>
+            <a href="#content" class="pulse" title="Explore the framework" data-smooth-scroll data-animation-duration="350" data-animation-easing="swing">
                 <%= inline_svg("icon-angle-down-large", class: "icon-size--large waypoint-icon") %>
             </a>
         </div>
@@ -217,7 +217,7 @@ smoothScroll: false
             <div class="waypoint-title subhead--small">
                 Go Further
             </div>
-            <a href="#cta" class="pulse" title="Learn more" data-smooth-scroll data-animation-duration="200" data-animation-easing="swing">
+            <a href="#cta" class="pulse" title="Learn more" data-smooth-scroll data-animation-duration="400" data-animation-easing="swing">
                 <%= inline_svg("icon-angle-down-large", class: "icon-size--large waypoint-icon") %>
             </a>
         </div>
