Fix for dynamic header level tags in slim event partial. Can pass level into partial. Future: create dynamic tag cf. https://codepen.io/pierreburel/pen/VYdoaM

--- a/source/contentful_templates/event.html.erb
+++ b/source/contentful_templates/event.html.erb
@@ -33,14 +33,14 @@ end
 <section class="section-article container-color--gray-light">
     <div class="row align-center">
         <div class="columns small-12 large-8">
-            <%= partial "partials/content/event", :locals => { :event => p } %>
+            <%= partial "partials/content/event", :locals => { :event => p, :level => 1 } %>
             <% if p.has_key?("cta_ref") %>
                 <% if p["cta_ref"].has_key?("custom_form") %>
                 <div class="row collapse">
                     <div class="columns small-12 medium-10 large-8">
                         <div class="callout callout--large drop">
                             <% if p["cta_ref"].has_key?("title") %>
-                                <h2 class="headline-4"><%= p.cta_ref.title %></h2>
+                                <h1 class="headline-4"><%= p.cta_ref.title %></h1>
                                 <hr class="divider" />
                             <% end %>
                             <% if p["cta_ref"].has_key?("desc") %><%= Kramdown::Document.new(p["cta_ref"]["desc"]).to_html %><% end %>
